# HomeWork-21.1

./: .gitignore  README.md  pyproject.toml
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_post_views_count.py
blog/templates/blog/: post_confirm_delete.html  post_detail.html  post_form.html  post_list.html  view_all.html
catalog/: admin.py  models.py  urls.py  views.py
catalog/managment/: fill.py
catalog/migrations/: 0001_initial.py  0002_product_manufactured_at.py  0003_remove_product_manufactured_at.py  0004_rename_product_category_product_category_and_more.py
catalog/templates/: base.html  contacts.html  home.html  product.html
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
fixtures/: catalog.json
