[tool.poetry]
name = "homework-20-1"
version = "0.1.0"
description = ""
authors = ["Карен <karen.karakeyan@yandex.ru>"]
readme = "README.md"
packages = [{include = "homework_20"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1"
pillow = "^10.4.0"
ipython = "^8.27.0"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
